# LxHA

./: .env.example  .gitignore  docker-compose.yml  run.sh  winrun.sh
Frontend/: pnpm-lock.yaml
Frontend/src/: App.tsx  main.tsx
admin/: Cargo.toml
admin/src/: main.rs
admin/src/controllers/: instances.rs  mod.rs  profiles.rs  projects.rs
admin/src/incus_api/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs  types.rs
admin/src/models/: mod.rs
admin/src/routes/: instances.rs  profiles.rs  projects.rs
authentication/: .env  Cargo.toml  Todos.md
authentication/src/: main.rs  router.rs  test.html
authentication/src/config/: mod.rs  state.rs  types.rs  variables.rs
authentication/src/controllers/: account.rs  authentication.rs  mod.rs  test.rs
authentication/src/middlewares/: mod.rs  network.rs  role.rs  session.rs  validations.rs
authentication/src/models/: instance.rs  mod.rs  user.rs
authentication/src/repository/: user.rs
authentication/src/routes/: mod.rs
authentication/src/utils/: mod.rs  session.rs
certs/: lxha.crt  lxha.key
dashboard/: Cargo.toml
dashboard/src/: main.rs
dashboard/src/config/: lxha.crt  lxha.key
dashboard/src/controllers/: instances.rs  messages.rs  mod.rs  user.rs
dashboard/src/incus_api/: delete.rs  get.rs  mod.rs  post.rs  put.rs  types.rs
dashboard/src/middlewares/: mod.rs
dashboard/src/models/: mod.rs
dashboard/src/routes/: instances.rs  messages.rs  mod.rs  user.rs
dashboard/src/utils/: mod.rs
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: app.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: Actions.tsx  ConfirmModal.tsx  For.tsx  Header.tsx  LoginForm.tsx  LogoutButton.tsx  Modals.tsx  Navbar.tsx  Pagination.tsx  SearchBar.tsx  SpecialSearchBar.tsx  Table.tsx  TableRow.tsx  User.tsx
frontend/src/layouts/: MainLayout.tsx  ModalLayout.tsx  SimpleLayout.tsx
frontend/src/lib/: axios.ts  data.ts  hooks.ts  router.tsx  schemas.ts  string.ts  types.ts
frontend/src/pages/: 404.tsx  Analitycs.tsx  ClientDashboard.tsx  Dashboard.tsx  EmailUpdate.tsx  Index.tsx  Instances.tsx  Landing.tsx  Loading.tsx  Messages.tsx  User.tsx  Users.tsx  index.tsx
frontend/src/store/: AppStore.ts  (+7 more)
lxha_lib/: Cargo.toml
lxha_lib/src/: lib.rs
lxha_lib/src/app/: constants.rs  mod.rs  state.rs
lxha_lib/src/models/: instance.rs  message.rs  mod.rs  token.rs  user.rs
lxha_lib/src/repository/: instance.rs  mod.rs  token.rs  user.rs
lxha_lib/src/utils/: cookies.rs  dbg.rs  jsonwebtoken.rs  mod.rs  reqwest.rs
lxha_lib/src/utils/reqwest/: reqwest.rs  services.rs
mailer/: .eslintrc.json  .gitignore  package-lock.json  package.json  pnpm-lock.yaml
mailer-rs/: Cargo.toml
mailer-rs/src/: controllers.rs  main.rs  router.rs
mailer-rs/src/utils/: mailer.rs  mod.rs  templates.rs
mailer/src/: config.js  controllers.js  index.js  middlewares.js  router.js
monitoring/: Cargo.toml
monitoring/src/: main.rs
nginx/: lxha.conf  lxha.local.conf
(+28 files in other folders)
