[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
lxha_lib = { path = "../lxha_lib" }
axum = "0.7.5"
axum_responses = "0.1.7"
mongodb = "2.8.2"
bcrypt = "0.15.1"
tower-cookies = "0.10.0"
dotenv = "0.15.0"
tokio = "1.37.0"
cookie = "0.18.1"
futures = "0.3.30"
serde = "1.0.198"
serde_json = "1.0.116"
tower-http = { version = "0.5.1", features = ["cors"] }
