[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
lxha_lib = { path = "../lxha_lib" }
axum = "0.7.5"
axum_responses = "0.1.4"
bcrypt = "0.15.1"
cookie = "0.18.1"
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
mongodb = "2.8.2"
regex = "1.10.4"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.10.0"
chrono = "0.4.38"
time = "0.3.36"
tower-http = { version = "0.5.1", features = ["cors"] }
