[package]
name = "lxha_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum_responses = "0.1.7"
dotenv = "0.15.0"
futures = "0.3.30"
lazy_static = "1.4.0"
mongodb = "2.8.2"
reqwest = { version = "0.12.4", features = ["cookies", "json"] }
serde = "1.0.198"
serde_json = "1.0.116"
tokio = "1.37.0"
tower-cookies = "0.10.0"
cookie = "0.18.1"
time = "0.3.36"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"